3.6.9
* trying out performance optimizations
* added ignored entities config, this stops stat data packets from being sent to client,
 should make servers less laggy as most entities are bats and fish, and you don't really care about their stats

3.6.8
* updated chinese lang
* added mastery descriptions by dreckz
* added 3 new divine buff spells
* removed some advancements

3.6.7
* added a new mastery: divine!
* added new fire mastery synergy
* removed deobf jar, seemed to confuse more non modders than it helped modders
* pets shouldnt take spell damage from owners anymore

3.6.6
* removed experimental map drop rate restrictions
* effective spell level is now derived from effective mastery level.
* fix death message
* fix spell cooldown being synced wrongly when in gui
* should fix ores not generating in modded biomes

3.6.5
* fixed volcano doing only 1 hit
* buffed thorn armor and hunter instinct stats

3.6.4
* should fix possible server crash

3.6.3
* should fix some spells not going on cooldown after casting
3.6.2
* fix entrance room 

3.6.1
* should fix mobs sometimes not doing dmg
* fix effect stats scaling to player level instead of spell level

3.6.0

SPELL REWORK!
* spell tree has been remade into masteries.
* spells and synergies now have levels
* synergies now cost mana
* removed some spells as i consider them bad (like geyser) and others because their spell school doesn't have enough spells, they'll probably be re-added later
* added some new spells
* spell damage stats are now percents and increase spell damage by percent, instead of adding to the damage.
* infusion reworked
* added cooldown reduction, mana cost reduction and cast rate stats (they might not be used yet though, but they're there)
* added +1 to spell school levels stat
* removed elemental conversion and transfer stats, mostly useless after spell damage became a percent